Bug 135586 - Accessibility Quotes are not announced when working with screenreaders
Summary: Accessibility Quotes are not announced when working with screenreaders
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.5.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2020-08-09 19:29 UTC by Karl-Heinz Arkenau
Modified: 2023-10-28 03:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl-Heinz Arkenau 2020-08-09 19:29:38 UTC
Description:
When working with screenreaders, quotes, no matters if in Charakters or in paragraphs are not annouced.

Steps to Reproduce:
1.Open Writer
2. Create a quote, no matter character or paraph formated.
3.read the text with, for example, with Screenreader NVDA. 

Actual Results:
When reading to text which contains a quote, no quote is announced.

Expected Results:
Announcment of the quote.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Detected with screenreader NVDA 2020.2
Comment 1 juergenkohler23 2020-09-03 07:22:12 UTC
I reproduced this bug with LibreOffice 7.0 and NVDA 2020.2 using Windows 10.
Comment 2 Matthias Doellert 2020-09-07 14:23:40 UTC
The bug could be reproduced.  Windows 10, Libre Office 7.0.0.3 (x64), NVDA 2020.2 and 2019.2.1
Comment 3 juergenkohler23 2020-09-10 07:17:38 UTC
Addition to my exact operating system information:

Windows
Edition	Windows 		10 Home
Version				1909
Operating system build		18363.1016

LibreOffice
Version:	7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU-Threads: 	4; BS: Windows 10.0 Build 18363; UI-Render: Skia/Vulkan; VCL: win
Locale: 	de-DE (de_DE); UI: de-DE
Calc: 		threaded
Comment 4 juergenkohler23 2021-05-17 09:21:50 UTC
Since LibreOffice version 7.1.3.2 it is possible to distinguish between paragraph style and character style. However, if I mark a quotation in paragraph format, NVDA does not read it out at all; while in character format the text is read out, but the old bug still exists that no information about the occurrence of a quotation is output.


Windows
Edition Windows 10 Home
Version	20H2
Installed on ‎05.‎02.‎2021
Operating system build	19042.985

LibreOffice
Version: 7.1.3.2 (x64) / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 5 Michael Weghorn 2021-10-14 06:26:44 UTC
Corresponding issue in NVDA issue tracker: https://github.com/nvaccess/nvda/issues/11686
Comment 6 QA Administrators 2023-10-15 03:16:12 UTC Comment hidden (noise, obsolete)
Comment 7 Michael Weghorn 2023-10-25 16:19:33 UTC
Still reproducible with the current development version, git master as of commit 9299afbbd6bd264ba90e5e0ac21a700e88f56c0f.

I've started working on this.
Comment 8 Commit Notification 2023-10-25 18:49:11 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/809409ca845ff1269d3d8f516678048404d8fea8

tdf#135586 a11y: Make IAccessible2 an external and update it

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-10-28 03:45:54 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/33061be5a7538409839dcca3116b9fa72629013f

tdf#135586 wina11y: Make role mapping more explicit

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-10-28 03:45:57 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f44eae4912e8f2ba34d93a71a609473df976a2cb

tdf#135586 a11y: Add a new BLOCK_QUOTE a11y role

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-10-28 03:45:59 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b7d2a9c824aca1a4dfd1b857a3620e73ade6bc0d

tdf#135586 sw a11y: Use BLOCK_QUOTE role for "Block Quotation" para

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Michael Weghorn 2023-10-28 03:47:59 UTC
With the commits mentioned in the previous commit messages, LibreOffice now reports the IA2_ROLE_BLOCK_QUOTE role for paragraphs using the "Block Quotation" paragraph style and NVDA announces the block quote as expected.