vcl/unx/gtk4/a11y.cxx
@@ -138,6 +138,7 @@ map_accessible_role(const css::uno::Reference<css::accessibility::XAccessible>& 
                 eRole = GTK_ACCESSIBLE_ROLE_WIDGET;
                 break;
             case css::accessibility::AccessibleRole::PARAGRAPH:
+            case css::accessibility::AccessibleRole::BLOCK_QUOTE:
 #if GTK_CHECK_VERSION(4, 13, 1)
                 eRole = GTK_ACCESSIBLE_ROLE_PARAGRAPH;
 #else
